falta finalizar hero

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="./global.css">
   <link rel="stylesheet" href="./Header/header.css">
+  <link rel="stylesheet" href="./Hero/hero.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -18,17 +19,25 @@
         </section>
         <header>
           <nav>
-            <img src="../src/assets/icons/ic_menu.svg" alt="menu-products"></img>
+            <img src="./assets/icons/ic_menu.svg" alt="menu-products"></img>
             <p>Todos os produtos</p>
           </nav>
-          <img src="../src/assets/icons/ic_header_title.svg" alt="sparkle-title"></img> 
+          <img src="./assets/icons/ic_header_title.svg" alt="sparkle-title"></img> 
           <div class="header-user">
             <button>Assinar Whiteeth</button>
-            <img src="../src/assets/icons/ic_user.svg" alt="user-icon">
-            <img src="../src/assets/icons/ic_cart.svg" alt="shop-cart">
+            <img src="./assets/icons/ic_user.svg" alt="user-icon">
+            <img src="./assets/icons/ic_cart.svg" alt="shop-cart">
           </div> 
         </header>
       </div>
+
+      <section class="banner">
+        <div>
+          <h2>Cuide do seu sorriso, <span>mas também do planeta</span></h2>
+          <p>Encontre aqui produtos de higiene bucal orgânicos e refrescantes, como pasta de dente, escova de dente e muito mais!</p>
+        </div>
+      </section>
+
 
     
     </main>
