--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="./global.css">
   <link rel="stylesheet" href="./Header/header.css">
   <link rel="stylesheet" href="./Hero/hero.css">
+  <link rel="stylesheet" href="./Filter/filter.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -13,12 +14,13 @@
   <title>Whiteteeth</title>
 </head>
   <body>
-    <main>
+   
       <div>
         <section class="ad-register">
           <h4> <a href="#">cadastre-se</a> para ganhar 15% na primeira compra</h4>
         </section>
-        <header>
+      
+        <header class="aligned-main-section">
           <nav>
             <img src="./assets/icons/ic_menu.svg" alt="menu-products"></img>
             <p>Todos os produtos</p>
@@ -32,12 +34,33 @@
         </header>
       </div>
 
-      <section class="banner">
+      <main>
+
+      <section class="section-banner">
         <div>
           <h2>Cuide do seu sorriso, <span>mas também do planeta</span></h2>
           <p>Encontre aqui produtos de higiene bucal orgânicos e refrescantes, como pasta de dente, escova de dente e muito mais!</p>
         </div>
       </section>
+
+      <div class="section-filter">
+        <h2>oral care</h2>
+
+        <section class="filter-choices aligned-main-section">
+          <div class="buttons-filter-choices">
+            <img src="./assets/icons/ic_filter.svg" alt="filter-icon">
+            <p>Filtros </p>
+            <button>Todos </button>
+            <button>Pasta de dente </button>
+            <button>Escova de dente </button>
+            <button>Raspador de língua </button>
+            <button>Clareamento</button>
+            <button>Aparelhos ortodônticos </button>
+          </div>
+
+          <img src="./assets/icons/ic_chat.svg" alt="chat-icon">
+        </section>
+      </div>
 
 
     
