--- a/src/index.html
+++ b/src/index.html
@@ -50,12 +50,12 @@
           <div class="buttons-filter-choices">
             <img src="./assets/icons/ic_filter.svg" alt="filter-icon">
             <p>Filtros </p>
-            <button class="filter-option" value="Todos">Todos </button>
+            <button class="filter-option" value="Todos" onclick="filterCards()">Todos </button>
             <button class="filter-option" value ="Pasta de dente" onclick="filterCards()">Pasta de dente</button>
             <button class="filter-option" value ="Escova de dente" onclick="filterCards()">Escova de dente</button>
-            <button class="filter-option" value ="Raspador de língua"  onclick="filterCards()">Raspador de língua</button>
+            <button class="filter-option" value ="Raspador de língua" onclick="filterCards()" >Raspador de língua</button>
             <button class="filter-option" value = "Clareamento" onclick="filterCards()">Clareamento</button>
-            <button class="filter-option" value = "Aparelhos ortodônticos"  onclick="filterCards()">Aparelhos ortodônticos</button>
+            <button class="filter-option" value = "Aparelhos ortodônticos" onclick="filterCards()" >Aparelhos ortodônticos</button>
           </div>
 
           <img src="./assets/icons/ic_chat.svg" alt="chat-icon">
