faltando tela para elementos que não temos

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,10 @@
 
       <main>
 
+
+  
+        
+
       <section class="section-banner">
         <div>
           <h2>Cuide do seu sorriso, <span>mas também do planeta</span></h2>
@@ -51,7 +55,7 @@
           <div class="buttons-filter-choices">
             <img src="./assets/icons/ic_filter.svg" alt="filter-icon">
             <p>Filtros </p>
-            <button class="filter-option" value="Todos" onclick="filterCards()">Todos </button>
+            <button class="filter-option active" value="Todos" onclick="filterCards()">Todos </button>
             <button class="filter-option" value ="Pasta de dente" onclick="filterCards()">Pasta de dente</button>
             <button class="filter-option" value ="Escova de dente" onclick="filterCards()">Escova de dente</button>
             <button class="filter-option" value ="Raspador de língua" onclick="filterCards()" >Raspador de língua</button>
