falta ajustar duplicação

--- a/src/index.html
+++ b/src/index.html
@@ -47,8 +47,10 @@
           <div id="root">
               <section class="cart-sidebar">
                 <h3 class="cart-title">Meu carrinho</h3>
-                <div id ="cart-item"> 
-                  <h4> Seu carrinho está vazio :(</h4>
+                <div>
+                  <div class="cart-items">
+                    <h4> Seu carrinho está vazio :(</h4>
+                  </div>      
                 </div>
                 <div class="cart-total">
                   <h4>Total</h4>
