--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,12 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./global.css">
+
   <link rel="stylesheet" href="./Header/header.css">
   <link rel="stylesheet" href="./Hero/hero.css">
   <link rel="stylesheet" href="./Filter/filter.css">
   <link rel="stylesheet" href="./Products/products.css">
+  <link rel="stylesheet" href="./global.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -84,9 +85,9 @@
             <button class="filter-option" value="Todos" onclick="filterCards()">Todos </button>
             <button class="filter-option" value ="Pasta de dente" onclick="filterCards()">Pasta de dente</button>
             <button class="filter-option" value ="Escova de dente" onclick="filterCards()">Escova de dente</button>
-            <button class="filter-option" value ="Raspador de língua" onclick="filterCards()" >Raspador de língua</button>
+            <button class="filter-option bigger-choice" value ="Raspador de língua" onclick="filterCards()" >Raspador de língua</button>
             <button class="filter-option" value = "Clareamento" onclick="filterCards()">Clareamento</button>
-            <button class="filter-option" value = "Aparelhos ortodônticos" onclick="filterCards()" >Aparelhos ortodônticos</button>
+            <button class="filter-option bigger-choice" value = "Aparelhos ortodônticos" onclick="filterCards()" >Aparelhos ortodônticos</button>
           </div>
 
           <img src="./assets/icons/ic_chat.svg" alt="chat-icon">
