preciso mudar hero

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
         
 
       <section class="section-banner">
-        <div>
+        <div class="banner-text">
           <h2>Cuide do seu sorriso, <br><span>mas também do planeta</span></h2>
           <p>Encontre aqui produtos de higiene bucal orgânicos e refrescantes, como pasta de dente, escova de dente e muito mais!</p>
         </div>
