--- a/src/index.html
+++ b/src/index.html
@@ -72,6 +72,9 @@
         
 
       <section class="section-banner">
+        <div class="banner-image">
+          <img src="./assets/images/img_hero.svg" alt="filter-icon">
+        </div>
         <div class="banner-text">
           <h2>Cuide do seu sorriso, <br><span>mas também do planeta</span></h2>
           <p>Encontre aqui produtos de higiene bucal orgânicos e refrescantes, como pasta de dente, escova de dente e muito mais!</p>
@@ -85,12 +88,12 @@
           <div class="buttons-filter-choices">
             <img src="./assets/icons/ic_filter.svg" alt="filter-icon">
             <p>Filtros </p>
-            <button class="filter-option" value="Todos" onclick="filterCards()">Todos </button>
-            <button class="filter-option" value ="Pasta de dente" onclick="filterCards()">Pasta de dente</button>
-            <button class="filter-option" value ="Escova de dente" onclick="filterCards()">Escova de dente</button>
-            <button class="filter-option bigger-choice" value ="Raspador de língua" onclick="filterCards()" >Raspador de língua</button>
-            <button class="filter-option" value = "Clareamento" onclick="filterCards()">Clareamento</button>
-            <button class="filter-option bigger-choice" value = "Aparelhos ortodônticos" onclick="filterCards()" >Aparelhos ortodônticos</button>
+            <button class="filter-option" value="Todos">Todos </button>
+            <button class="filter-option" value ="Pasta de dente">Pasta de dente</button>
+            <button class="filter-option" value ="Escova de dente">Escova de dente</button>
+            <button class="filter-option bigger-choice" value ="Raspador de língua" >Raspador de língua</button>
+            <button class="filter-option" value = "Clareamento">Clareamento</button>
+            <button class="filter-option bigger-choice" value = "Aparelhos ortodônticos" >Aparelhos ortodônticos</button>
           </div>
 
           <img src="./assets/icons/ic_chat.svg" alt="chat-icon">
@@ -125,7 +128,7 @@
             <h2>Quer dicas de hábitos de higiene bucal e ganhar desconto na primeira compra?</h2>
             <form class="footer-form">
               <input class="footer-email-input" type="email" id="name" placeholder="Digite seu email aqui">
-              <button class="footer-form-button" value="Submit">Enviar</button>
+              <button class="footer-form-button" type="Submit">Enviar</button>
             </form>
           </div>
         </section>
