todos como default

--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
           <div class="buttons-filter-choices">
             <img src="./assets/icons/ic_filter.svg" alt="filter-icon">
             <p>Filtros </p>
-            <button class="filter-option" value="Todos">Todos </button>
+            <button class="filter-option" value="Todos" id="filter-default">Todos </button>
             <button class="filter-option" value ="Pasta de dente">Pasta de dente</button>
             <button class="filter-option" value ="Escova de dente">Escova de dente</button>
             <button class="filter-option bigger-choice" value ="Raspador de língua" >Raspador de língua</button>
