07-envio-de-email

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="cart-total">
                   <h4>Total</h4>
-                  <p>R$ 0,00</p>
+                  <p class="cart-result">R$ 0,00</p>
                 </div>
               </section>
           </div>
