--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
           <button class="header-menu">
             <nav>
               <img src="./assets/icons/ic_menu.svg" alt="menu-products"></img>
-              <p>Todos os produtos</p>
+              <p class="header-all">Todos os produtos</p>
             </nav>
           </button>
           <img src="./assets/icons/ic_header_title.svg" alt="sparkle-title"></img> 
@@ -72,12 +72,12 @@
         
 
       <section class="section-banner">
-        <div class="banner-image">
-          <img src="./assets/images/img_hero.svg" alt="filter-icon">
-        </div>
-        <div class="banner-text">
-          <h2>Cuide do seu sorriso, <br><span>mas também do planeta</span></h2>
-          <p>Encontre aqui produtos de higiene bucal orgânicos e refrescantes, como pasta de dente, escova de dente e muito mais!</p>
+        <div class="banner-hero">
+          <div class="banner-image"></div>
+          <div class="banner-text">
+            <h2>Cuide do seu sorriso, <br><span>mas também do planeta</span></h2>
+            <p>Encontre aqui produtos de higiene bucal orgânicos e refrescantes, como pasta de dente, escova de dente e muito mais!</p>
+          </div>
         </div>
       </section>
 
