renderização do html pelo express tbm

--- a/src/index.html
+++ b/src/index.html
@@ -42,15 +42,15 @@
             <div class="container-cart">
               <div id="root">
                     <h3 class="cart-title">Meu carrinho</h3>
-                    <div>
-                      <div class=""></div>
+                    <div class="main-cart">
                       <div class="cart-items">
                         <h4> Seu carrinho está vazio :(</h4>
                       </div>      
-                    </div>
+                    
                     <div class="cart-total">
                       <h4>Total</h4>
                       <p class="cart-result">R$ 0,00</p>
+                    </div>
               </div>
             </div>
           </div> 
