adicionando menu todos os produtos

--- a/src/index.html
+++ b/src/index.html
@@ -24,12 +24,23 @@
         </section>
       
         <header class="aligned-main-section">
-          <button class="header-menu">
+          <button id="header-menu">
             <nav>
               <img src="./assets/icons/ic_menu.svg" alt="menu-products"></img>
               <p class="header-all">Todos os produtos</p>
             </nav>
           </button>
+
+            <section class="header-all-products">
+                <div class="nav-all-products">
+                  <li class="nav-filter" value="Todos" id="filter-default">Todos </li>
+                  <li class="nav-filter" value ="Pasta de dente">Pasta de dente</li>
+                  <li class="nav-filter" value ="Escova de dente">Escova de dente</li>
+                  <li class="nav-filter bigger-choice" value ="Raspador de língua" >Raspador de língua</li>
+                  <li class="nav-filter" value = "Clareamento">Clareamento</li>
+                  <li class="nav-filter bigger-choice" value = "Aparelhos ortodônticos" >Aparelhos ortodônticos</li>
+                </div>
+            </section>
           <img class="header-title" src="./assets/icons/ic_header_title.svg" alt="sparkle-title"></img> 
           <div class="header-user">
             <button class="button-assign">Assinar Whiteeth</button>
