07-envio-de-email

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
    
       <div>
         <section class="ad-register">
-          <h4> <a href="#">cadastre-se</a> para ganhar 15% na primeira compra</h4>
+          <h4> <a href="#https://www.caffeinearmy.com.br/">cadastre-se</a> para ganhar 15% na primeira compra</h4>
         </section>
       
         <header class="aligned-main-section">
@@ -44,7 +44,7 @@
           <img class="header-title" src="./assets/icons/ic_header_title.svg" alt="sparkle-title"></img> 
           <div class="header-user">
             <button class="button-assign">Assinar Whiteeth</button>
-            <img src="./assets/icons/ic_user.svg" alt="user-icon">
+            <img class="header-icon-user" src="./assets/icons/ic_user.svg" alt="user-icon">
             <button id="header-cart-user">
               <img src="./assets/icons/ic_cart.svg" alt="shop-cart">
               <p>0</p>
@@ -147,7 +147,8 @@
 
     </section>
 
-    <script src="./index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="module" src="./index.js"></script>
      
   </body>
 </html>
