ajuste link cadastre-se

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
    
       <div>
         <section class="ad-register">
-          <h4> <a href="#https://www.caffeinearmy.com.br/">cadastre-se</a> para ganhar 15% na primeira compra</h4>
+          <h4> <a href="https://www.caffeinearmy.com.br/">cadastre-se</a> para ganhar 15% na primeira compra</h4>
         </section>
       
         <header class="aligned-main-section">
