--- a/src/index.html
+++ b/src/index.html
@@ -136,7 +136,7 @@
           <div>
             <h2>Quer dicas de hábitos de higiene bucal e ganhar desconto na primeira compra?</h2>
             <form class="lead-form">
-              <input class="lead-email-input" type="email" id="name" placeholder="Digite seu email aqui">
+              <input class="lead-email-input" type="email" id="name" required placeholder="Digite seu email aqui">
               <button class="lead-form-button" type="Submit">Enviar</button>
             </form>
           </div>
